--- a/index.html
+++ b/index.html
@@ -39,19 +39,21 @@
             <ul>
                 <li>
                     <h3 class="p-title">Внимание к деталям</h3>
-                    <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+                    <p class="text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
                 </li>
                 <li>
                     <h3 class="p-title">Пунктуальность</h3>
-                    <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+                    <p class="text">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
+                    </p>
                 </li>
                 <li>
                     <h3 class="p-title">Планирование</h3>
-                    <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+                    <p class="text">Равным образом консультация с широким активом в значительной степени обуславливает.
+                    </p>
                 </li>
                 <li>
                     <h3 class="p-title">Современные технологии</h3>
-                    <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+                    <p class="text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
                 </li>
             </ul>
         </section>
@@ -75,22 +77,22 @@
                 <li>
                     <img src="./images/img1.jpg" alt="Фото. Игорь Демьяненко" width="270" height="260">
                     <h3 class="comand-title">Игорь Демьяненко</h3>
-                    <p>Product Designer</p>
+                    <p class="profession">Product Designer</p>
                 </li>
                 <li>
                     <img src="./images/img2.jpg" alt="Фото. Ольга Репина" width="270" height="260">
                     <h3 class="comand-title">Ольга Репина</h3>
-                    <p>Frontend Developer</p>
+                    <p class="profession">Frontend Developer</p>
                 </li>
                 <li>
                     <img src="./images/img3.jpg" alt="Фото. Николай Тарасов" width="270" height="260">
                     <h3 class="comand-title">Николай Тарасов</h3>
-                    <p>Marketing</p>
+                    <p class="profession">Marketing</p>
                 </li>
                 <li>
                     <img src="./images/img4.jpg" alt="Фото. Михаил Ермаков" width="270" height="260">
                     <h3 class="comand-title">Михаил Ермаков</h3>
-                    <p>UI Designer</p>
+                    <p class="profession">UI Designer</p>
                 </li>
             </ul>
         </section>
