--- a/index.html
+++ b/index.html
@@ -18,48 +18,48 @@
     <header class="header">
         <nav>
             <a href="/" lang="en" class="logo"><span class="web">Web</span><span class="studio">Studio</span></a>
-            <ul class="nav">
-                <li><a href="" class="link current">Студия</a></li>
-                <li><a href="./portfolio.html" class="link">Портфолио</a></li>
-                <li><a href="" class="link">Контакты</a></li>
+            <ul class="sitenav">
+                <li><a href="" class="sitenav-link current">Студия</a></li>
+                <li><a href="./portfolio.html" class="sitenav-link">Портфолио</a></li>
+                <li><a href="" class="sitenav-link">Контакты</a></li>
             </ul>
         </nav>
-        <ul class="nav">
-            <li><a href="mailto:info@devstudio.com" class="link-address">info@devstudio.com</a></li>
-            <li><a href="tel:+380961111111" class="link-address">+38 096 111 11 11</a></li>
+        <ul class="contacts">
+            <li><a href="mailto:info@devstudio.com" class="contacts-link">info@devstudio.com</a></li>
+            <li><a href="tel:+380961111111" class="contacts-link">+38 096 111 11 11</a></li>
         </ul>
     </header>
     <main>
         <section class="hero">
             <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
-            <button type="button" class="btn">Заказать услугу</button>
+            <button type="button" class="hero-btn">Заказать услугу</button>
         </section>
         <section>
             <h2 class="section-title">Преимущества</h2>
-            <ul>
+            <ul class="features">
                 <li>
-                    <h3 class="p-title">Внимание к деталям</h3>
-                    <p class="text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+                    <h3 class="features-title">Внимание к деталям</h3>
+                    <p class="features-text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
                 </li>
                 <li>
-                    <h3 class="p-title">Пунктуальность</h3>
-                    <p class="text">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
+                    <h3 class="features-title">Пунктуальность</h3>
+                    <p class="features-text">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
                     </p>
                 </li>
                 <li>
-                    <h3 class="p-title">Планирование</h3>
-                    <p class="text">Равным образом консультация с широким активом в значительной степени обуславливает.
+                    <h3 class="features-title">Планирование</h3>
+                    <p class="features-text">Равным образом консультация с широким активом в значительной степени обуславливает.
                     </p>
                 </li>
                 <li>
-                    <h3 class="p-title">Современные технологии</h3>
-                    <p class="text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+                    <h3 class="features-title">Современные технологии</h3>
+                    <p class="features-text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
                 </li>
             </ul>
         </section>
         <section>
             <h2 class="section-title">Чем мы занимаемся</h2>
-            <ul>
+            <ul class="works">
                 <li>
                     <a href=""><img src="images/box1.jpg" alt="Пример работы" width="370" height="294"></a>
                 </li>
@@ -71,41 +71,41 @@
                 </li>
             </ul>
         </section>
-        <section class="section-comanda">
+        <section class="section-team">
             <h2 class="section-title">Наша команда</h2>
-            <ul>
+            <ul class="team">
                 <li>
                     <img src="./images/img1.jpg" alt="Фото. Игорь Демьяненко" width="270" height="260">
-                    <h3 class="comand-title">Игорь Демьяненко</h3>
-                    <p class="profession">Product Designer</p>
+                    <h3 class="team-title">Игорь Демьяненко</h3>
+                    <p class="team-text">Product Designer</p>
                 </li>
                 <li>
                     <img src="./images/img2.jpg" alt="Фото. Ольга Репина" width="270" height="260">
-                    <h3 class="comand-title">Ольга Репина</h3>
-                    <p class="profession">Frontend Developer</p>
+                    <h3 class="team-title">Ольга Репина</h3>
+                    <p class="team-text">Frontend Developer</p>
                 </li>
                 <li>
                     <img src="./images/img3.jpg" alt="Фото. Николай Тарасов" width="270" height="260">
-                    <h3 class="comand-title">Николай Тарасов</h3>
-                    <p class="profession">Marketing</p>
+                    <h3 class="team-title">Николай Тарасов</h3>
+                    <p class="team-text">Marketing</p>
                 </li>
                 <li>
                     <img src="./images/img4.jpg" alt="Фото. Михаил Ермаков" width="270" height="260">
-                    <h3 class="comand-title">Михаил Ермаков</h3>
-                    <p class="profession">UI Designer</p>
+                    <h3 class="team-title">Михаил Ермаков</h3>
+                    <p class="team-text">UI Designer</p>
                 </li>
             </ul>
         </section>
     </main>
     <footer class="footer">
-        <a href="/" lang="en"><span class="footer-web">Web</span><span class="footer-studio">Studio</span></a>
+        <a href="/" lang="en" class="footer-logo"><span class="footer-web">Web</span><span class="footer-studio">Studio</span></a>
         <address>
             <ul>
                 <li>
                     <p class="footer-address">г. Киев, пр-т Леси Украинки, 26</p>
                 </li>
-                <li><a href="mailto:info@example.com" class="contacts">info@example.com</a></li>
-                <li><a href="tel:+380991111111" class="contacts"> +38 099 111 11 11</a></li>
+                <li><a href="mailto:info@example.com" class="footer-contacts">info@example.com</a></li>
+                <li><a href="tel:+380991111111" class="footer-contacts"> +38 099 111 11 11</a></li>
             </ul>
         </address>
     </footer>
