--- a/portfolio.html
+++ b/portfolio.html
@@ -19,102 +19,105 @@
     <header class="header">
         <nav>
             <a href="/" lang="en" class="logo"><span class="web">Web</span><span class="studio">Studio</span></a>
-            <ul class="nav">
-                <li><a href="./index.html" class="link">Студия</a></li>
-                <li><a href="" class="link current">Портфолио</a></li>
-                <li><a href="" class="link">Контакты</a></li>
+            <ul class="sitenav">
+                <li><a href="./index.html" class="sitenav-link">Студия</a></li>
+                <li><a href="" class="sitenav-link current">Портфолио</a></li>
+                <li><a href="" class="sitenav-link">Контакты</a></li>
             </ul>
         </nav>
-        <ul class="nav">
-            <li><a href="mailto:info@devstudio.com" class="link-address">info@devstudio.com</a></li>
-            <li><a href="tel:+380961111111" class="link-address">+38 096 111 11 11</a></li>
+        <ul class="contacts">
+            <li><a href="mailto:info@devstudio.com" class="contacts-link">info@devstudio.com</a></li>
+            <li><a href="tel:+380961111111" class="contacts-link">+38 096 111 11 11</a></li>
         </ul>
     </header>
     <main>
         <section>
             <h1>Наши работы</h1>
-            <ul>
-                <li><button type="button" class="btn-portfolio">Все</button></li>
-                <li><button type="button" class="btn-portfolio">Веб-сайты</button></li>
-                <li><button type="button" class="btn-portfolio">Приложения</button></li>
-                <li><button type="button" class="btn-portfolio">Дизайн</button></li>
-                <li><button type="button" class="btn-portfolio">Маркетинг</button></li>
+            <ul class="filtr">
+                <li><button type="button" class="filtr-button">Все</button></li>
+                <li><button type="button" class="filtr-button">Веб-сайты</button></li>
+                <li><button type="button" class="filtr-button">Приложения</button></li>
+                <li><button type="button" class="filtr-button">Дизайн</button></li>
+                <li><button type="button" class="filtr-button">Маркетинг</button></li>
             </ul>
-            <ul>
+            <ul class="portfolio">
                 <li>
                     <a href="">
                         <img src="./images/portfolio1.jpg" alt="Технокряк" width="370" height="294">
-                        <h2 class="work-title">Технокряк</h2>
-                        <p class="work-text">Веб-сайт</p>
+                        <h2 class="portfolio-title">Технокряк</h2>
+                        <p class="portfolio-text">Веб-сайт</p>
                     </a>
                 </li>
                 <li>
                     <a href="">
                         <img src="./images/portfolio2.jpg" alt="Постер New Orlean vs Golden Star" width="370"
                             height="294">
-                        <h2 class="work-title">Постер New Orlean vs Golden Star</h2>
-                        <p class="work-text">Дизайн</p>
+                        <h2 class="portfolio-title">Постер New Orlean vs Golden Star</h2>
+                        <p class="portfolio-text">Дизайн</p>
                     </a>
                 </li>
                 <li>
                     <a href="">
                         <img src="./images/portfolio3.jpg" alt="Ресторан Seafood. Постер" width="370" height="294">
-                        <h2 class="work-title">Ресторан Seafood</h2>
-                        <p class="work-text">Приложение</p>
+                        <h2 class="portfolio-title">Ресторан Seafood</h2>
+                        <p class="portfolio-text">Приложение</p>
                     </a>
                 </li>
                 <li>
                     <a href="">
                         <img src="./images/portfolio4.jpg" alt="Наушники" width="370" height="294">
-                        <h2 class="work-title">Проект Prime</h2>
-                        <p class="work-text">Маркетинг</p>
+                        <h2 class="portfolio-title">Проект Prime</h2>
+                        <p class="portfolio-text">Маркетинг</p>
                     </a>
                 </li>
                 <li>
                     <a href="">
                         <img src="./images/portfolio5.jpg" alt="Коробки" width="370" height="294">
-                        <h2 class="work-title">Проект Boxes</h2>
-                        <p class="work-text">Приложение</p>
+                        <h2 class="portfolio-title">Проект Boxes</h2>
+                        <p class="portfolio-text">Приложение</p>
                     </a>
                 </li>
                 <li>
                     <a href="">
                         <img src="./images/portfolio6.jpg" alt="Монитор" width="370" height="294">
-                        <h2 class="work-title">Inspiration has no Borders</h2>
-                        <p class="work-text">Веб-сайт</p>
+                        <h2 class="portfolio-title">Inspiration has no Borders</h2>
+                        <p class="portfolio-text">Веб-сайт</p>
                     </a>
                 </li>
                 <li>
                     <a href="">
                         <img src="./images/portfolio7.jpg" alt="Журнал" width="370" height="294">
-                        <h2 class="work-title">Издание Limited Edition</h2>
-                        <p class="work-text">Дизайн</p>
+                        <h2 class="portfolio-title">Издание Limited Edition</h2>
+                        <p class="portfolio-text">Дизайн</p>
                     </a>
                 </li>
                 <li>
                     <a href="">
                         <img src="./images/portfolio8.jpg" alt="Проект LAB" width="370" height="294">
-                        <h2 class="work-title">Проект LAB</h2>
-                        <p class="work-text">Маркетинг</p>
+                        <h2 class="portfolio-title">Проект LAB</h2>
+                        <p class="portfolio-text">Маркетинг</p>
                     </a>
                 </li>
                 <li>
                     <a href="">
                         <img src="./images/portfolio9.jpg" alt="Работа за ноутбуком" width="370" height="294">
-                        <h2 class="work-title">Growing Business</h2>
-                        <p class="work-text">Приложение</p>
+                        <h2 class="portfolio-title">Growing Business</h2>
+                        <p class="portfolio-text">Приложение</p>
                     </a>
                 </li>
             </ul>
         </section>
     </main>
     <footer class="footer">
-        <a href="/" lang="en"><span class="footer-web">Web</span><span class="footer-studio">Studio</span></a>
+        <a href="/" lang="en" class="footer-logo"><span class="footer-web">Web</span><span
+                class="footer-studio">Studio</span></a>
         <address>
             <ul>
-                <li><p class="footer-address">г. Киев, пр-т Леси Украинки, 26</p></li>
-                <li><a href="mailto:info@example.com" class="contacts">info@example.com</a></li>
-                <li><a href="tel:+380991111111" class="contacts"> +38 099 111 11 11</a></li>
+                <li>
+                    <p class="footer-address">г. Киев, пр-т Леси Украинки, 26</p>
+                </li>
+                <li><a href="mailto:info@example.com" class="footer-contacts">info@example.com</a></li>
+                <li><a href="tel:+380991111111" class="footer-contacts"> +38 099 111 11 11</a></li>
             </ul>
         </address>
     </footer>
